fixed navbar spacing on index page

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
     height: calc(100vh - 8em);
-    padding: 4em;
+    padding-bottom: 4em;
     color: black;
     font-family: 'Anonymous Pro', monospace;
     background-color: white;
